--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,11 @@
    License: none (public domain)
 */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -48,7 +53,7 @@ table {
 	border-spacing: 0;
 }
 
-
+/* Set every element's box-sizing to border-box */
 * {
     box-sizing: border-box;
 }
@@ -64,134 +69,187 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-
-body{
-	width: 880px;
-	margin:auto;
-}
-.container{
-   width:880px;
-   margin:auto; 
-}
-@media(max-width:800px){
-    .container{
-        width: 800px;
-        background:purple;
-    }
-}
-@media(max-width:500px){
-    .container{
-        width:500px;
-        background: teal;
-    }
-}
-header{
-    width:100%;
-	margin-bottom: 50px;
-	display: flex;
-	flex-direction: row;
-}
-    @media(max-width:800px){
-        header{
-            flex-direction: column-reverse;
-            align-content: center;
-        }
-    }
-header nav{
-	margin-top: 16px;
-	 width: 80%;
-}
-    @media(max-width:800px){
-        header nav{
-            width: 83%;
-            margin-left:55px;
-        }
-    }
-    @media(max-width:800px){
-        header img{
-          width:30%;
-          margin-left: 35%;
-        }
-        @media(max-width:800px){
-          .top img{
-            display: none;
-        }
-        }
-header nav a{
-color:gray;
-text-decoration: none;
-padding: 10px;
-margin:0 18px;
+.container {
+    width: 880px;
+    margin: auto;
 }
 
-/*Mixins*/
+/* Header Styles */
 
-.second-header .top{
-	display: flex;
-	flex-direction: row;
-	width: 49.8%;
-	vertical-align: top;
-	padding: 20px;
-
+header {
+    width: 100%;
+    display: flex;
 }
 
-.second-header .top h1{
-	font-size: 73px;
-	margin-top: 50px;
-	text-align: center;
-
-}
-.second-header button{
-	
-	margin-left: 60px;
-	text-align: center;
-	border-radius: 10px;
-	font-size: 20px;
-	vertical-align:top;
-	padding: 10px 42px;
-
+header nav {
+    margin-top: 40px; 
+    width: 610px;
+    justify-content: space-between;
+    display: flex;
 }
 
-.top-container{
-	display:flex;
-	border-top: 1px solid black;
-	margin-bottom: 40px;
-	margin-top: 40px;
-}
-.top-container h2{
-	margin-top: 40px;
+header nav a {
+    text-decoration: none;
+    color: #b0b0b0;
 }
 
-.top-container .top-bottom {
-flex-direction: column;
-
-}
- .second-header .top img{
-margin-left: 171px;
-}
-    
-
-.spv{
-	display:flex;
-	border-bottom: 1px solid black;
-	
-}
-.spv .bottom-content{
-	margin-top:20px;
-	flex-direction: column;
-	padding: 10px;
-	width: 32%;
-	margin-bottom: 40px;
-}
-footer{
-	margin-top: 40px;
-}
-footer address p{
-margin: 20px 0;
-}
-h6{
-	text-align: center;
+header nav a:hover {
+    text-decoration: underline;
+    color: black;
 }
 
+header .logo {
+    margin: 28px 0 0 91px;
+}
 
+/* Call To Action (CTA) Styles */
+
+.cta {
+    display: flex;
+    margin-top: 72px;
+    justify-content: flex-end;
+}
+
+.cta .cta-text {
+    font-size: 72px;
+    text-align: center;
+    letter-spacing: 5px;
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    align-items: center;
+    margin: 0 82px 0 0;
+}
+
+.cta .cta-text button {
+    border: 1px double black;
+    font-size: 16px;
+    background: white;
+    width: 170px;
+    height: 32px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.cta .cta-text button:hover {
+    background: black;
+    color: white;
+}
+
+/* Main Content Styles */
+
+.main-content {
+   border-top: 2px solid black; 
+   border-bottom: 2px solid black;
+   margin: 75px 0 35px 0;
+   padding: 35px 0;
+   font-size: 16px;
+   line-height: 18px;
+}
+
+.main-content .top-content {
+    display: flex;
+}
+
+.main-content .middle-img {
+    display: block;
+    margin: 30px auto;
+}
+
+.main-content .bottom-content {
+    display: flex;
+}
+
+.main-content .bottom-content p {
+    padding-right: 20px;
+}
+
+/* Contact Styles */
+
+.contact p {
+    margin: 15px 0;
+}
+
+/* Footer Styles */
+
+footer {
+    text-align: center;
+    margin: 40px 0 20px;
+}
+
+/* Services Styles */
+
+.services-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    line-height: 1.3;
+}
+
+.services-content .services-header-img {
+    margin: 20px 0;
+}
+
+.services-content h1 {
+    font-size: 26px;
+    margin: 10px 0;
+}
+
+.services-content .services-text {
+ border-bottom: 1px solid black;
+ padding-bottom: 40px;
+ margin-bottom: 20px
+}
+
+.services-content .card {
+    padding: 20px;
+    border: 1px solid black;
+    width: 420px;
+    background: whitesmoke;
+    margin: 20px 0;
+}
+
+.services-content .card button {
+    padding: 10px 40px;
+    margin-top: 20px;
+    cursor: pointer;
+    background: white;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+
+.services-content .card button:hover {
+    background: black;
+    color: white;
+} 
+
+.services-content .services-info ul {
+    margin: 20px;
+}
+
+.services-content .services-info ul li{
+    list-style: square;
+    padding: 5px;
+}
+
+.services-content .services-info {
+    display: flex;
+    flex-wrap: wrap;
+    border-top: 2px solid black; 
+    margin: 20px 0 35px 0;
+    padding-top: 40px; 
+}
+
+.services-content .services-info .facts {
+  width: 400px;
+  margin: 0 60px 20px 0;
+}
+
+.services-content .services-info .facts p {
+  margin-bottom: 20px;
+}
+
+.services-content .services-info .services-info-img {
+  width: 420px;
+  height: 300px;
 }
