--- a/css/index.css
+++ b/css/index.css
@@ -73,19 +73,34 @@ h1, h2, h3, h4, h5 {
     width: 880px;
     margin: auto;
 }
-
+ @media(max-width:800px){
+     .container{
+         width:800px;
+         background-color: purple;
+     }
+ }
 /* Header Styles */
 
 header {
     width: 100%;
     display: flex;
 }
-
+@media(max-width:800px){
+    header {
+        flex-direction: column-reverse;
+        
+     }
+ }
 header nav {
     margin-top: 40px; 
     width: 610px;
     justify-content: space-between;
     display: flex;
+}
+@media(max-width:800px){
+    header nav{
+        margin-left:11%;
+    }
 }
 
 header nav a {
@@ -101,7 +116,12 @@ header nav a:hover {
 header .logo {
     margin: 28px 0 0 91px;
 }
-
+@media(max-width:800px){
+    header .logo{
+        width: 30%;
+        margin-left: 35%;
+    }
+}
 /* Call To Action (CTA) Styles */
 
 .cta {
@@ -109,7 +129,12 @@ header .logo {
     margin-top: 72px;
     justify-content: flex-end;
 }
+@media(max-width:800px){
+    .cta img{
+        display: none;
 
+    }
+}
 .cta .cta-text {
     font-size: 72px;
     text-align: center;
@@ -120,7 +145,11 @@ header .logo {
     align-items: center;
     margin: 0 82px 0 0;
 }
-
+@media(max-width:800px){
+  .cta .cta-text{
+    margin-right: 31%;
+  }  
+}
 .cta .cta-text button {
     border: 1px double black;
     font-size: 16px;
@@ -150,10 +179,19 @@ header .logo {
 .main-content .top-content {
     display: flex;
 }
-
+@media(max-width:800px){
+    .main-content .top-content .text-content{
+        padding:10px;
+    }
+}
 .main-content .middle-img {
     display: block;
     margin: 30px auto;
+}
+@media(max-width:800px){
+    .main-content .middle-img{
+        width:100%;
+    }
 }
 
 .main-content .bottom-content {
