--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5 {
  }
  @media(max-width:500px){
      .container{
-         width: 500px;
+         width: 100%;
          background-color:teal;
      }
  }
@@ -97,11 +97,7 @@ header {
         
      }
  }
- @media(max-width:500px){
-     header{
-         width:100%;
-        }
- }
+ 
 header nav {
     margin-top: 40px; 
     width: 610px;
@@ -116,7 +112,8 @@ header nav {
 @media(max-width:500px){
     header nav{
         flex-direction: column;
-       
+       margin-left:165px;
+       width:20%;
     }
 }
 
@@ -126,7 +123,8 @@ header nav a {
 }
 @media(max-width:500px) {
     header nav a{
-        padding:10px 0;
+        width:40%;
+        padding:10px ;
         margin-left: 27%;
       
         
